# loose-timer

./: Cargo.toml  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: ci.yml
macros/: Cargo.toml
macros/src/: lib.rs  syn_utils.rs  timeout_impl.rs
src/: lib.rs  macros.rs  tests.rs  timeout_helpers.rs
tests/: compile_fail.rs  should_timeout.rs  timeout.rs
tests/compile_fail/timeout/: extra_args.rs  extra_args.stderr  invalid_suffix.rs  invalid_suffix.stderr  missing_duration.rs  missing_duration.stderr  negative_value.rs  negative_value.stderr  result_error_not_convertible.rs  result_error_not_convertible.stderr  result_error_not_convertible_sync.rs  result_error_not_convertible_sync.stderr  should_timeout_error_not_convertible.rs  should_timeout_error_not_convertible.stderr  should_timeout_error_not_convertible_sync.rs  should_timeout_error_not_convertible_sync.stderr
