[package]
name = "loose-timer"
version = "0.1.0"
edition = "2024"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/loose-timer"
documentation = "https://docs.rs/loose-timer/"
keywords = ["async", "timer", "timeout", "test"]
categories = ["asynchronous", "development-tools::testing"]
description = "Runtime-agnostic asynchronous time utilities."
# rust-version = ""


[dependencies]
loose-timer-macros = { path = "macros" }
slabmap = "0.2.1"
parse-display = "0.10.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert-call = "0.1.2"
futures = "0.3.31"

[workspace]
members = ["macros"]
